--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.livrarypractice_20220221">
-
-<!--    인터넷은 기본권한에 해당 . 태그만만 추가하면 사용 가능-->
-    <uses-permission android:name="android.permission.INTERNET"/>
-
-
-<!--    위험한 권한도 마찬가지로 태그는 추가해야 함-->
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <!-- 인터넷은 기본권한에 해당 . 태그만만 추가하면 사용 가능 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- 위험한 권한도 마찬가지로 태그는 추가해야 함 -->
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
@@ -17,17 +14,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LivraryPractice_20220221">
         <activity
-            android:name=".ViewPhotoActivity"
-            android:exported="false"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".SplashActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity
+            android:name=".ViewPhotoActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
         </activity>
     </application>
 
